--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -1,10 +1,4 @@
 <?php
-    if(isset($this->data["message"]) && $this->data["message"][1] === "general") //* Si on à un message dans la data
-    {
-    ?>
-        <span class="success"><?=$this->data["message"][0]; ?></span>
-    <?php
-    }
     if(isset($this->data["user"]))
     {
         $user = $this->data["user"];
@@ -23,14 +17,22 @@
         </div>
     </header>
     <h1>Mon compte</h1>
+    <?php
+        if(isset($this->data["message"]) && $this->data["field"] === "general") //* Si on à un message dans la data
+        {
+        ?>
+            <span class="success"><?=$this->data["message"]; ?></span>
+        <?php
+        }
+    ?>
     <form action="index.php?route=account" method="POST" id="account_form">
         <fieldset>
             <label for="username">Nom d'utilisateur</label>
             <input type="text" name="username" id="username"  autocomplete="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
             <span id="error_username"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "username")
+                if(isset($this->data["message"]) && $this->data["field"] === "username")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -38,9 +40,9 @@
             <label for="email">Email</label>
             <input type="email" name="email" id="email" autocomplete="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
             <span id="error_email"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "email")
+                if(isset($this->data["message"]) && $this->data["field"] === "email")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -48,9 +50,9 @@
             <label for="password">Password</label>
             <input type="password" name="password" id="password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
             <span id="error_password"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "password")
+                if(isset($this->data["message"]) && $this->data["field"] === "password")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -58,9 +60,9 @@
             <label for="confirm_password">Confirmation du password</label>
             <input type="password" name="confirm_password" id="confirm_password" autocomplete="new-password" minlength="8" maxlength="50" onpaste="return false;">
             <span id="error_confirm_password"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "confirm_password")
+                if(isset($this->data["message"]) && $this->data["field"] === "confirm_password")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -79,9 +81,9 @@
             ?> 
             maxlength="50" onpaste="return false;">
             <span id="error_first_name"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "first_name")
+                if(isset($this->data["message"]) && $this->data["field"] === "first_name")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -100,9 +102,9 @@
             ?> 
             maxlength="50" onpaste="return false;">
             <span id="error_last_name"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "last_name")
+                if(isset($this->data["message"]) && $this->data["field"] === "last_name")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -121,9 +123,9 @@
             ?>
             maxlength="10" onpaste="return false;">
             <span id="error_tel"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "tel")
+                if(isset($this->data["message"]) && $this->data["field"] === "tel")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -142,9 +144,9 @@
             ?>
             maxlength="255" onpaste="return false;">
             <span id="error_address"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "address")
+                if(isset($this->data["message"]) && $this->data["field"] === "address")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -163,9 +165,9 @@
             ?>
             maxlength="15" onpaste="return false;">
             <span id="error_zip"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "zip")
+                if(isset($this->data["message"]) && $this->data["field"] === "zip")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
@@ -184,9 +186,9 @@
             ?>
             maxlength="100" onpaste="return false;">
             <span id="error_city"><?php
-                if(isset($this->data["message"]) && $this->data["message"][1] === "city")
+                if(isset($this->data["message"]) && $this->data["field"] === "city")
                 {
-                    echo $this->data["message"][0];
+                    echo $this->data["message"];
                 }
             ?></span>
         </fieldset>
