--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -113,8 +113,8 @@
 
 form {
   margin: 0 auto;
-  padding: 5px;
-  width: 260px;
+  padding: 15px;
+  width: 50%;
   background: linear-gradient(to bottom, rgb(47, 85, 151), rgb(47, 85, 151), rgb(143, 170, 220));
   border-radius: 0 16px 0 16px;
 }
@@ -123,25 +123,43 @@ form p {
   font-weight: bold;
   margin-left: 16px;
 }
+form div.fieldset-separator {
+  margin: 1rem;
+  margin-left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: white;
+}
 form fieldset {
+  width: 100%;
   margin-top: 5px;
+  padding: 0;
   border: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+form fieldset legend {
+  width: 100%;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  color: white;
+  text-decoration: underline;
 }
 form fieldset label {
+  width: auto;
   color: white;
   margin: 16px 10px 0 16px;
 }
 form fieldset input {
-  width: 96%;
+  width: 100%;
   margin-top: 8px;
   border-radius: 0 5px 0 5px;
   box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
 }
-form fieldset input[type=checkbox] {
-  width: 96%;
-  margin-top: 8px;
-  border-radius: 0;
-  box-shadow: none;
+form fieldset select {
+  width: 75%;
+  height: 1rem;
+  margin: auto auto 0.15rem 1rem;
 }
 form fieldset textarea {
   width: 96%;
@@ -151,18 +169,34 @@ form fieldset textarea {
   box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
   border: solid 1px black;
 }
+form fieldset span.input-description {
+  width: 100%;
+  font-size: 0.75rem;
+  color: white;
+}
+form fieldset span.input-description:last-child {
+  margin-bottom: 2rem;
+}
+form fieldset div.input-separator {
+  margin: 1rem;
+  width: 100%;
+  height: 1px;
+  background-color: cyan;
+}
 form fieldset.checkbox-field {
   display: flex;
   justify-content: space-between;
 }
 form fieldset.checkbox-field label {
-  margin: auto;
+  width: auto;
+  margin-right: 0;
   margin-left: 0.26rem;
-  font-size: 0.68rem;
+  font-size: 1rem;
 }
 form fieldset.checkbox-field input {
   width: auto;
   height: auto;
+  margin: auto auto 0.25rem 1rem;
 }
 form fieldset.textarea {
   height: 200px;
@@ -351,8 +385,11 @@ html body main #main-header #tagline-container #tagline {
 }
 
 .success {
-  color: green;
+  padding: 0.5rem;
   font-size: 1rem;
+  color: green;
+  background-color: white;
+  border: solid 1px green;
 }
 
 .error {
@@ -363,9 +400,12 @@ html body main #main-header #tagline-container #tagline {
   padding: 0.6rem;
   position: absolute;
   border-radius: 0 16px 0 16px;
-  background: linear-gradient(to bottom, white, white, rgb(143, 170, 220));
   color: red;
   font-size: 0.75rem;
+}
+
+[id*=error].content-write {
+  background: linear-gradient(to bottom, white, white, rgb(143, 170, 220));
 }
 
 html {
