--- a/assets/styles/scss/general/_form.scss
+++ b/assets/styles/scss/general/_form.scss
@@ -6,8 +6,8 @@
 form
 {
   margin: 0 auto;
-  padding: 5px;
-  width: 260px;
+  padding: 15px;
+  width: 50%;
   background: linear-gradient(to bottom, $dark-blue, $dark-blue, $light-blue);
   border-radius: 0 16px 0 16px;
   p
@@ -16,30 +16,54 @@ form
     font-weight: bold;
     margin-left: 16px;
   }
+
+  div.fieldset-separator
+    {
+      margin: 1rem;
+      margin-left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: white;
+    }
   fieldset
   {
+    width: 100%;
     margin-top: 5px;
+    padding: 0;
     border: none;
+    display: flex;
+    flex-wrap: wrap;
+    legend
+    {
+      width: 100%;
+      margin-top: 2rem;
+      font-size: 1.5rem;
+      color: white;
+      text-decoration: underline;
+    }
+
     label
     {
+      width: auto;
       color: white;
-      
       margin: 16px 10px 0 16px;
     }
+
     input
     {
-      width: 96%;
+      width: 100%;
       margin-top: 8px;
       border-radius: 0 5px 0 5px;
       box-shadow: 3px 3px 3px 0px $light-blue;
     }
-    input[type="checkbox"]
+
+    select
     {
-      width: 96%;
-      margin-top: 8px;
-      border-radius: 0;
-      box-shadow: none;
+      width: 75%;
+      height: 1rem;
+      margin: auto auto 0.15rem 1rem;
     }
+
     textarea
     {
       width: 96%;
@@ -49,6 +73,26 @@ form
       box-shadow: 3px 3px 3px 0px $light-blue;
       border: solid 1px black;
     }
+
+    span.input-description
+    {
+      width: 100%;
+      font-size: 0.75rem;
+      color: white;
+    }
+
+    span.input-description:last-child
+    {
+      margin-bottom: 2rem;
+    }
+
+    div.input-separator
+    {
+      margin: 1rem;
+      width: 100%;
+      height: 1px;
+      background-color: cyan;
+    }
   }
   fieldset.checkbox-field
   {
@@ -56,14 +100,16 @@ form
     justify-content: space-between;
     label
     {
-      margin: auto;
+      width: auto;
+      margin-right: 0;
       margin-left:0.26rem;
-      font-size: 0.68rem;
+      font-size: 1rem;
     }
     input
     {
       width: auto;
       height: auto;
+      margin: auto auto 0.25rem 1rem;
     }
     
   }
