--- a/assets/styles/scss/general/_main.scss
+++ b/assets/styles/scss/general/_main.scss
@@ -23,6 +23,12 @@ html
     {
       width: 96%;
       margin: 0 auto;
+
+      .text-center
+      {
+        text-align: center;
+      }
+
       #main-header
       {
         height: 33vw;
