--- a/assets/styles/scss/views/_quote-request.scss
+++ b/assets/styles/scss/views/_quote-request.scss
@@ -2,6 +2,10 @@
 
 .quote-request-container
 {
+  p
+  {
+    text-align: center;
+  }
   #main-header
   {
     background-image: url("../../images/backgrounds/quote-request-background.jpg");
