--- a/assets/styles/scss/views/_shop.scss
+++ b/assets/styles/scss/views/_shop.scss
@@ -17,11 +17,13 @@
   #templates-section
   {
     width: 100%;
-    section
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    .template-card
     {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
+      width: 280px;
     }
   }
 }
