--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -113,8 +113,8 @@
 
 form {
   margin: 0 auto;
-  padding: 15px;
-  width: 50%;
+  padding: 0;
+  width: 100%;
   background: linear-gradient(to bottom, rgb(47, 85, 151), rgb(47, 85, 151), rgb(143, 170, 220));
   border-radius: 0 16px 0 16px;
 }
@@ -151,7 +151,7 @@ form fieldset label {
   margin: 16px 10px 0 16px;
 }
 form fieldset input {
-  width: 100%;
+  width: 95%;
   margin-top: 8px;
   border-radius: 0 5px 0 5px;
   box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
@@ -188,7 +188,7 @@ form fieldset.checkbox-field {
   justify-content: space-between;
 }
 form fieldset.checkbox-field label {
-  width: auto;
+  width: 75%;
   margin-right: 0;
   margin-left: 0.26rem;
   font-size: 1rem;
@@ -225,6 +225,39 @@ form fieldset.textarea textarea {
 .template-card img {
   width: 100%;
 }
+.template-card img.center-picture:hover {
+  animation: imageZoomCenter 0.75s forwards;
+}
+.template-card img.left-picture:hover {
+  animation: imageZoomLeft 0.75s forwards;
+}
+.template-card img.right-picture:hover {
+  animation: imageZoomRight 0.75s forwards;
+}
+@keyframes imageZoomCenter {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(2.5);
+  }
+}
+@keyframes imageZoomLeft {
+  from {
+    transform: scale(1) translateX(0);
+  }
+  to {
+    transform: scale(2.5) translateX(20%);
+  }
+}
+@keyframes imageZoomRight {
+  from {
+    transform: scale(1) translateX(0);
+  }
+  to {
+    transform: scale(2.5) translateX(-20%);
+  }
+}
 .template-card footer {
   margin: 0;
   text-align: center;
@@ -257,10 +290,23 @@ form fieldset.textarea textarea {
   font-size: 0.75rem;
 }
 
-.btn, input[type*=submit] {
+.btn {
   width: 164px;
   margin: 0 calc(50% - 82px);
   margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
+  background: linear-gradient(to bottom, rgb(143, 170, 220), white, rgb(143, 170, 220));
+  border-radius: 0 5px 0 5px;
+  border: solid 1px black;
+  font-weight: bold;
+  color: rgb(47, 85, 151);
+}
+
+input[type*=submit] {
+  width: 164px;
+  margin: 0 calc(50% - 82px);
+  margin-top: 1.5rem;
   margin-bottom: 0.5rem;
   box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
   background: linear-gradient(to bottom, rgb(143, 170, 220), white, rgb(143, 170, 220));
@@ -279,6 +325,27 @@ form fieldset.textarea textarea {
   color: white;
   box-shadow: 6px 6px 6px 0px rgb(143, 170, 220);
   background: linear-gradient(to bottom, rgb(47, 85, 151), rgb(47, 85, 151), white);
+}
+
+#float-btn {
+  width: 25%;
+  position: fixed;
+  right: 0;
+  top: 60vh;
+  box-shadow: 3px 3px 3px 0px rgb(143, 170, 220);
+  background: linear-gradient(to bottom, rgb(143, 170, 220), white, rgb(143, 170, 220));
+  border-radius: 0 5px 0 5px;
+  border: solid 1px black;
+  font-weight: bold;
+  color: rgb(47, 85, 151);
+}
+#float-btn a {
+  color: rgb(47, 85, 151);
+}
+
+#float-btn:hover, a {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .view-btn {
@@ -336,6 +403,9 @@ html body main {
   width: 96%;
   margin: 0 auto;
 }
+html body main .text-center {
+  text-align: center;
+}
 html body main #main-header {
   height: 33vw;
   display: flex;
@@ -360,28 +430,42 @@ html body main #main-header #tagline-container #tagline {
 
 #top-footer {
   width: 100%;
-  height: 136px;
+  height: auto;
   margin-top: 2rem;
-  display: block;
   background: linear-gradient(to bottom, rgb(143, 170, 220) 10%, rgb(47, 85, 151));
   display: flex;
+  justify-content: space-between;
 }
 #top-footer nav {
-  width: 100%;
+  width: 45%;
   height: 100%;
 }
 #top-footer nav ul {
+  height: 75%;
+  padding-left: 0;
+  text-align: center;
   list-style-type: none;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
 }
-#top-footer nav ul li {
-  margin-left: 1vw;
-}
-#top-footer nav ul li a {
+#top-footer nav ul a {
   text-decoration: none;
   color: white;
+  color: white;
+}
+#top-footer nav ul a i {
+  padding: 0.2rem;
+  border-radius: 20px;
+  background-color: white;
+}
+#top-footer nav ul a:hover {
+  text-decoration: underline;
+  color: rgb(197, 90, 17);
+}
+#top-footer nav ul li {
+  margin-top: 0.15rem;
+  margin-left: 1vw;
 }
 
 .success {
@@ -463,10 +547,27 @@ html .card-title {
 .homepage-container #main-header #tagline-container #tagline {
   color: white;
 }
-.homepage-container #templates-section, .homepage-container #reviews-section {
+.homepage-container #templates-section {
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 20px;
+}
+.homepage-container #templates-section .template-card {
+  width: 280px;
+}
+.homepage-container #reviews-section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.homepage-container #reviews-section .review-card {
+  width: 280px;
+  height: 200px;
+  overflow: scroll;
 }
 
 .login-container #main-header {
@@ -507,11 +608,13 @@ html .card-title {
 }
 .shop-container #templates-section {
   width: 100%;
-}
-.shop-container #templates-section section {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  gap: 20px;
+}
+.shop-container #templates-section .template-card {
+  width: 280px;
 }
 
 .account-container #main-header {
@@ -595,6 +698,9 @@ html .card-title {
   display: none;
 }
 
+.quote-request-container p {
+  text-align: center;
+}
 .quote-request-container #main-header {
   background-image: url("../../images/backgrounds/quote-request-background.jpg");
 }
@@ -606,4 +712,14 @@ html .card-title {
 }
 .quote-request-container #left-aside-access {
   display: none;
+}
+
+#gnu-container h2 {
+  text-decoration: underline;
+}
+#gnu-container h3 {
+  margin-left: 1.5rem !important;
+}
+#gnu-container p, #gnu-container ul {
+  margin-left: 1.75rem;
 }/*# sourceMappingURL=style.css.map */
