--- a/assets/styles/scss/general/_footer.scss
+++ b/assets/styles/scss/general/_footer.scss
@@ -6,30 +6,47 @@
 #top-footer
 {
   width: 100%;
-  height: 136px;
+  height: auto;
   margin-top: 2rem;
-  display: block;
   background: linear-gradient(to bottom, $light-blue 10%, $dark-blue);
   display: flex;
-  
+  justify-content: space-between;
   nav
   {
-    width: 100%;
+    width: 45%;
     height: 100%;
     ul
     {
+      height: 75%;
+      padding-left: 0;
+      text-align: center;
       list-style-type: none;
       display: flex;
       flex-direction: column;
       flex-wrap: wrap;
+
+      a
+      {
+        text-decoration: none;
+        color: white;
+        i
+        {
+          padding: 0.2rem;
+          border-radius: 20px;
+          background-color: white;
+        }
+        color: white;
+      }
+      a:hover
+      {
+        text-decoration: underline;
+        color: rgb(197, 90, 17);
+      }
+      
       li
       {
+        margin-top: 0.15rem;
         margin-left: 1vw;
-        a
-        {
-          text-decoration: none;
-          color: white;
-        }
       }
     }
   }
