--- a/assets/styles/scss/general/_form.scss
+++ b/assets/styles/scss/general/_form.scss
@@ -6,8 +6,8 @@
 form
 {
   margin: 0 auto;
-  padding: 15px;
-  width: 50%;
+  padding: 0; // 15px en desktop
+  width: 100%; // À modifier en desktop
   background: linear-gradient(to bottom, $dark-blue, $dark-blue, $light-blue);
   border-radius: 0 16px 0 16px;
   p
@@ -18,13 +18,13 @@ form
   }
 
   div.fieldset-separator
-    {
-      margin: 1rem;
-      margin-left: 0;
-      width: 100%;
-      height: 2px;
-      background-color: white;
-    }
+  {
+    margin: 1rem;
+    margin-left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+  }
   fieldset
   {
     width: 100%;
@@ -51,7 +51,7 @@ form
 
     input
     {
-      width: 100%;
+      width: 95%;
       margin-top: 8px;
       border-radius: 0 5px 0 5px;
       box-shadow: 3px 3px 3px 0px $light-blue;
@@ -100,7 +100,7 @@ form
     justify-content: space-between;
     label
     {
-      width: auto;
+      width: 75%; //auto en desktop
       margin-right: 0;
       margin-left:0.26rem;
       font-size: 1rem;
