--- a/assets/styles/scss/general/_header.scss
+++ b/assets/styles/scss/general/_header.scss
@@ -24,6 +24,8 @@
   }
   .burger-container
   {
+    // position: absolute;
+    // right: 15px;
     width: 50px;
     display: flex;
     justify-content: center;
@@ -68,4 +70,5 @@
       flex-direction: column;
     }
   }
+  
 }
