--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -15,7 +15,7 @@
     <h1>Accueil</h1>
     <section id="presentation">
         <h2>Qui sommes nous?</h2>
-        <p>
+        <p class="text-center">
             La passion pour la technologie et un engagement fort dans les domaines de l'informatique
             sont à la base de la création de "KodingCore Development" avec un objectif clair : fournir aux
             professionnels des solutions de Développement web et logiciel innovantes et sur mesure.
