--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -1,15 +1,3 @@
-
-<?php
-    if(isset($this->data["message"])) //*Si on à un message dans la data
-    {
-        ?>
-        <?php
-        echo $this->data["message"];
-        ?>
-        
-        <?php
-    }
-?>
 <main class="contact-container" id="contact-container">
     <header id="main-header">
         <div id="tagline-container">
@@ -19,6 +7,19 @@
         </div>
     </header>
     <h1>Envoyer un message</h1>
+    <?php
+    if(isset($this->data["message"]) && isset($this->data["field"])) //*Si on à un message dans la data
+    {
+        ?>
+        <?php
+        if($this->data["field"] === "general")
+        {
+            echo $this->data["message"];
+        }
+        ?>
+        <?php
+    }
+    ?>
     <form action="index.php?route=contact" method="POST" id="contact_form">
         <fieldset>
             <label for="subject">Sujet</label>
