fixed btn, footer, zoom templates, gnu, about nav

--- a/assets/styles/scss/general/_form.scss
+++ b/assets/styles/scss/general/_form.scss
@@ -6,7 +6,7 @@
 form
 {
   margin: 0 auto;
-  padding: 0; // 15px en desktop
+  padding: 0;
   width: 100%; // À modifier en desktop
   background: linear-gradient(to bottom, $dark-blue, $dark-blue, $light-blue);
   border-radius: 0 16px 0 16px;
